# Kyak

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: cities_enriched.csv  cities_geocoded.csv  cities_weather.csv  hotels_osm.csv  top_hotels.csv
notebooks/: kyak.ipynb
src/kayak/: __init__.py  aws.py  config.py  pipeline.py  scoring.py
src/kayak_recommender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_pipeline.py
