[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "kayak-recommender"
version     = "2.0.0"
description = "End-to-end data pipeline for ranking French travel destinations"
readme      = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "plotly>=5.18",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
    "botocore>=1.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
app = [
    "streamlit>=1.35",
    "anthropic>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs",
]

[project.scripts]
kayak-pipeline = "kayak.pipeline:run_pipeline"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select  = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore  = ["E501"]   # line length handled by formatter

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
